--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "tinyvecdb"
 version = "0.1.0"
-description = "Add your description here"
+description = "TinyVecDB is a lightweight Python wrapper around SQLite and the sqlite-vec extension, providing a dead-simple API for local vector storage and similarity search."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.121.2",
     "jupyterlab>=4.4.10",
