--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,17 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["pytest>=8.0", "pytest-cov", "jupyterlab", "sentence-transformers"]
+dev = [
+    "pytest>=8.0",
+    "pytest-cov",
+    "jupyterlab",
+    "sentence-transformers",
+    "langchain-core>=1.0.7",
+    "llama-index>=0.14.8",
+    "llama-index-llms-ollama>=0.9.0",
+    "llama-index-llms-openai-like>=0.5.3",
+    "langchain-openai>=1.0.3",
+]
 
 [project.optional-dependencies]
 server = [
