feat: enhance distance strategies and add remove_texts method; update dependencies and documentation

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 # Embedding Model
 # Options: Any HuggingFace model ID compatible with SentenceTransformers
 
-# Default: TaylorAI/bge-micro-v2 (384-dim, tiny, fast)
-# Alternative: Snowflake/snowflake-arctic-embed-m-v2.0 (768-dim, high quality)
+# Default: TaylorAI/bge-micro-v2 (384-dim, tiny, very fast)
+# Alternative: Snowflake/snowflake-arctic-embed-xs (384-dim, best overall, fast)
 
 # Note: All models converted to ONNX format for performance.
 
