--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# TinyVecDB Configuration
+# SimpleVecDB Configuration
 
 # Embedding Model
 # Options: Any HuggingFace model ID compatible with SentenceTransformers
@@ -9,7 +9,7 @@
 # Note: All models converted to ONNX format for performance.
 
 EMBEDDING_MODEL=Snowflake/snowflake-arctic-embed-xs
-EMBEDDING_CACHE_DIR=~/.cache/tinyvecdb  # Model cache directory
+EMBEDDING_CACHE_DIR=~/.cache/simplevecdb  # Model cache directory
 # Optional: alias registry for allowed models (alias=repo_id,comma-separated)
 # EMBEDDING_MODEL_REGISTRY=default=Snowflake/snowflake-arctic-embed-xs,local-bge=TaylorAI/bge-micro-v2
 # Set to 0 to allow arbitrary repo IDs (default is locked)
@@ -25,7 +25,7 @@ EMBEDDING_CACHE_DIR=~/.cache/tinyvecdb  # Model cache directory
 # EMBEDDING_SERVER_API_KEYS=local-dev-token
 
 # Database
-DATABASE_PATH=./data/tinyvecdb.db
+DATABASE_PATH=./data/simplevecdb.db
 
 # Server Configuration
 SERVER_HOST=0.0.0.0
