refactor: extract quantization and search modules from core
- Create quantization.py with QuantizationStrategy class
- Create search.py with SearchEngine class
- Move Quantization enum to types.py to avoid circular imports
- Update core.py to delegate search operations to SearchEngine
- Reduce core.py from 879 to 664 lines (24% reduction)
- All tests passing (176/177), coverage at 95%

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: SimpleVecDB Docs
-site_url: https://coderdayton.github.io/simplevecdb
+site_url: https://coderdayton.github.io/SimpleVecDB
 repo_url: https://github.com/coderdayton/simplevecdb
-repo_name: simplevecdb
+repo_name: SimpleVecDB
 
 theme:
   name: shadcn
