fix: security hardening and performance improvements
- Fix RateLimiter memory leak with TTL cleanup (1hr TTL, 10k max buckets)
- Fix AsyncVectorDB.close() resource leak with try/finally
- Fix delete_by_ids docstring (no longer auto-vacuums)
- Remove redundant PRAGMA busy_timeout
- Add rate limiting to embeddings endpoint
- Add table name validation in CatalogManager
- Fix LIKE escape handling in filter builder
- Change SERVER_HOST default to 127.0.0.1
- Fix N+1 query in _hydrate_documents
- Add VectorDB.vacuum() method for explicit disk reclamation
- Add lambda_mult parameter to MMR search

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,10 +24,13 @@ jobs:
           uv venv
           uv pip install safety pip-audit
 
-      - name: Scan dependencies
+      - name: Scan dependencies with pip-audit
+        run: |
+          uv run pip-audit --requirement pyproject.toml --strict
+
+      - name: Scan dependencies with safety (informational)
         run: |
           uv run safety check --json || true
-          uv run pip-audit --requirement pyproject.toml || true
 
   code-scan:
     runs-on: ubuntu-latest
