--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 
 dependencies = [
-    "sqlite-vec>=0.1.6",
+    "sqlite-vec>=0.1.6",  # Note: CVE-2024-46488 workaround available in 0.1.3+
     "numpy>=2.0",
     "python-dotenv>=1.2.1",
     "psutil>=5.9.0",
