--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "simplevecdb"
-version = "1.3.0"
-description = "Dead-simple local vector database powered by sqlite-vec."
+version = "2.0.0"
+description = "Dead-simple local vector database powered by usearch HNSW."
 authors = [{ name = "Dayton Dunbar", email = "coderdayton14@gmail.com" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.10"
 
 dependencies = [
-    "sqlite-vec>=0.1.6",  # Note: CVE-2024-46488 workaround available in 0.1.3+
+    "usearch>=2.12",
     "numpy>=2.0",
     "python-dotenv>=1.2.1",
     "psutil>=5.9.0",
