--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,9 @@ dev = [
     "pytest-cov",
     "pytest-asyncio>=0.23.0",
     "jupyterlab",
-    "sentence-transformers[onnx]==5.1.2",
+    "sentence-transformers>=5.0",
     "fastapi>=0.115",
     "uvicorn[standard]>=0.30",
-    "onnxruntime>=1.16.0",
     "langchain-core>=1.0.7",
     "llama-index>=0.14.8",
     "llama-index-llms-ollama>=0.9.0",
@@ -44,7 +43,7 @@ dev = [
 server = [
     "fastapi>=0.115",
     "uvicorn[standard]>=0.30",
-    "sentence-transformers[onnx]==5.1.2",
+    "sentence-transformers>=5.0",
 ]
 examples = ["ollama"]
 
