feat: add SQLCipher encryption support for at-rest data protection
- Add encryption_key parameter to VectorDB for AES-256 encryption
- SQLCipher for transparent SQLite page-level encryption
- AES-256-GCM for usearch index files (.usearch.enc)
- Zero search performance overhead (decrypt on load only)
- PBKDF2-SHA256 key derivation (480k iterations)
- New optional [encryption] dependency group
- 20 new tests, all passing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simplevecdb"
-version = "2.0.0"
+version = "2.1.0"
 description = "Dead-simple local vector database powered by usearch HNSW."
 authors = [{ name = "Dayton Dunbar", email = "coderdayton14@gmail.com" }]
 license = { text = "MIT" }
@@ -44,6 +44,10 @@ server = [
     "fastapi>=0.115",
     "uvicorn[standard]>=0.30",
     "sentence-transformers>=5.0",
+]
+encryption = [
+    "sqlcipher3-binary>=0.5.0",
+    "cryptography>=41.0",
 ]
 examples = ["ollama"]
 
