--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dev = [
     "mkdocstrings[python]>=0.30.1",
     "mkdocs-shadcn>=0.9.7",
     "pymdown-extensions>=10.0",
+    "sqlcipher3-binary>=0.5.0",
+    "cryptography>=41.0",
 ]
 
 [project.optional-dependencies]
